--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,8 @@ name: CI
 on:
   pull_request:
 
+# for tests: https://github.com/ossf/scorecard-action
+
 jobs:
   test_go:
     name: Go tests
@@ -13,11 +15,12 @@ jobs:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       - run: make go-test-full
 
-  test_ui:
-    name: UI tests
-    runs-on: ubuntu-latest
-    container:
-      image: quay.io/prometheus/golang-builder:1.22-base
-    steps:
-      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
-      - run: make ui-test-full
+# TODO: make container with nextjs
+#  test_ui:
+#    name: UI tests
+#    runs-on: ubuntu-latest
+#    container:
+#      image: quay.io/prometheus/golang-builder:1.22-base
+#    steps:
+#      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+#      - run: make ui-test-full
