--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,7 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
-go.work
+notes.md
+
+vendor/*
+!vendor/modules.txt
